# agentic-assistant

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  docker-compose.langfuse.yml  pyproject.toml
.agents/skills/autopilot/: SKILL.md
.agents/skills/cleanup-feature/: SKILL.md
.agents/skills/session-bootstrap/: SKILL.md
.agents/skills/shared/: approval_gate.py
.claude/: settings.json
.claude/skills/session-bootstrap/: SKILL.md
.claude/skills/shared/: trust_posture.py
.codex/: hooks.json
.github/workflows/: ci.yml
docs/: agentic-assistant-bootstrap-v4.1.md  gotchas.md  observability.md  perplexity-feedback.md
docs/architecture/: compatibility-groups.yaml  interface-stability.md  primitives-and-providers.md
docs/architecture-analysis/: 2026-07-07-architecture-review.md  2026-07-16-ecosystem-pillars.md  2026-07-16-protocol-standards.md
docs/architecture/contracts/: capability-registry-v1.yaml
docs/decisions/: 0001-sdk-host-harness-split.md  0002-capability-protocols.md  0003-ag-ui-transport.md  0004-test-privacy-boundary.md  0005-model-seam-modelref-bindings.md  0006-cross-repo-reuse-policy.md  0007-meta-harness-posture.md  README.md
docs/deployment/: gx10-node.md  meta-harness.md
docs/merge-logs/: 2026-04-20.md  2026-05-12.md  2026-05-21.md  2026-07-20.md  2026-07-22.md
docs/prompts/: fix-session-bootstrap-setup-cloud-path.md  improve-cleanup-feature-submodule-handling.md  improve-plan-roadmap-decomposer.md
docs/security/: 2026-07-16-dependabot-triage.md
evaluation/: README.md  run-gate.sh
evaluation/datasets/: .gitignore
evaluation/descriptors/: agentic-assistant-simulation.yaml  agentic-assistant.yaml
evaluation/scenarios/: chat-bridge-plumbing.yaml  cli-help-sweep.yaml  health-smoke.yaml
evaluation/simulation/: README.md
evaluation/simulation/scenarios/: sim-role-compose-sweep.yaml  sim-tool-discovery.yaml
openspec/: checkpoint.json  roadmap.md  roadmap.yaml
openspec/changes/add-teacher-role/: design.md  proposal.md  tasks.md
openspec/changes/agent-iam/: design.md  tasks.md
openspec/changes/binding-manifest/: proposal.md  tasks.md
openspec/changes/bootstrap-vertical-slice/: design.md  proposal.md  tasks.md  work-packages.yaml
openspec/changes/capability-protocols/: proposal.md  tasks.md  work-packages.yaml
openspec/changes/capability-protocols-v2/: design.md  proposal.md  tasks.md
openspec/changes/durable-sessions/: design.md  tasks.md
openspec/changes/error-resilience/: design.md  proposal.md  session-log.md  tasks.md  work-packages.yaml
openspec/changes/extension-lifecycle/: design.md
openspec/changes/fix-harness-conversation-memory/: tasks.md
openspec/changes/harness-advisor-extension/: design.md  proposal.md  session-log.md  tasks.md  work-packages.yaml
openspec/changes/harness-ag-ui-bridge/: architecture-impact.md  (+7 more)
openspec/explore/: generative-ui-layer.md
personas/_template/: .gitignore  memory.md  persona.yaml  prompt.md
roles/_template/: prompt.md  role.yaml
roles/chief_of_staff/: prompt.md  role.yaml
roles/coder/: prompt.md  role.yaml
roles/planner/: prompt.md  role.yaml
roles/researcher/: prompt.md  role.yaml
roles/teacher/: prompt.md  role.yaml
roles/writer/: prompt.md  role.yaml
scripts/: check-architecture-ledger-drift.py  init-persona-repo.sh  push-with-submodule.sh  setup-persona.sh  verify-public-tests-standalone.sh  verify-submodule-standalone.sh
src/assistant/: __init__.py  cli.py
tests/: _privacy_guard_config.py  _privacy_guard_plugin.py  conftest.py  test_agent_identity.py  test_approval_gates.py  test_capabilities.py  test_capability_resolver.py  test_catalog_sync.py  test_ci_workflow_hygiene.py  test_cleanroom.py  test_cleanroom_cli.py  test_cli.py  test_cli_daemon.py  test_cli_db.py  test_cloud_client.py  test_composition.py  test_credential_scoping.py  test_db.py  test_delegation.py  test_delegation_context.py  test_delegation_p12.py  test_delegation_router.py  test_endpoint_health.py  test_env_var_contract.py  test_export_omnigent.py  test_extension_integrity.py  test_extension_lifecycle.py  test_extensions.py  test_extensions_dual_format.py  test_extensions_ms_graph.py  test_extensions_outlook.py  test_extensions_sharepoint.py  test_extensions_teams.py  test_graph_client.py  test_graphiti_embedder.py  test_graphiti_factory.py  test_guardrail_protocol.py  test_harness_model_routing.py  test_harness_ms_agent_fw.py  test_harness_selection.py  (+28 more)
tests/a2a/: helpers.py  test_agent_card.py  test_auth.py  test_server.py  test_session_registry.py  test_task_handler.py
tests/cli/: test_approvals_cli.py  test_serve.py  test_serve_a2a.py  test_serve_mcp.py  test_simulate.py
tests/conformance/: test_harness_adapter.py  test_memory_manager.py
tests/core/: test_durable_sessions.py  test_persona_auth_header.py  test_resilience.py  test_resilience_decorator.py  test_toolspec.py
tests/extensions/: test_health_status.py
tests/harnesses/: test_base_streaming.py  test_checkpointer.py  test_deep_agents_astream.py  test_ms_agent_fw_astream.py  test_session_rebind.py  test_tool_adapters.py
tests/http_tools/: conftest.py  test_auth.py  test_builder.py  test_builder_resilience.py  test_discovery.py  test_openapi.py  test_openapi_discovery_resilience.py  test_registry.py
tests/integration/: __init__.py  test_ag_ui_smoke.py  test_container_sandbox_smoke.py  test_graph_smoke.py
tests/mcp/: test_server.py
tests/mocks/: __init__.py  graph_client.py
tests/simulation/: test_dataset.py  test_discovery_integration.py  test_server.py
tests/telemetry/: conftest.py  test_cli_span_emission.py  test_config.py  test_context.py  test_decorators.py  test_docker_compose.py  test_extension_hooks.py  test_factory.py  test_fixture_sentinel.py  test_flush_hook.py  test_graphiti_hooks.py  test_http_tool_hooks.py  test_langfuse.py  test_memory_hooks.py  test_noop.py  test_noop_perf.py  test_privacy_compliance.py  test_protocol.py  test_sanitize.py  test_tool_wrap.py  test_traced_harness_streaming.py
tests/web/: test_a2a_mount.py  test_app.py  test_mcp_mount.py
(+754 files in other folders)
