[project]
name = "assistant"
version = "0.1.0"
description = "Personal AI assistant with plugin-based persona system and composable roles"
readme = "README.md"
authors = [
    { name = "Jan Neumann", email = "349330+jankneumann@users.noreply.github.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "tenacity>=9.0,<10.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "graphiti-core[falkordb]>=0.5",
    "falkordb>=1.5,<1.6",
    "deepagents>=0.0.12",
    "langchain>=0.3",
    "langchain-anthropic>=0.2",
    # langchain-core>=0.3.49 introduced get_usage_metadata_callback,
    # which traced_harness uses (via _scoped_usage_callback) to capture
    # token counts per invocation. Earlier 0.3.x releases would
    # ImportError on assistant.telemetry.decorators. IMPL_REVIEW round-3
    # codex finding #1.
    "langchain-core>=0.3.49",
    # P5 ms-graph-extension wp-foundation-impls (D5, D29):
    # ``msal`` powers ``core/msal_auth.py`` strategies (Interactive +
    # ClientCredentials). ``agent-framework`` is consumed by
    # ``harnesses/sdk/ms_agent_fw.py`` (D5 pinned via Context7);
    # both deps live in core dependencies because the foundation
    # modules depend on them at import time. Test-only ``respx``
    # mocks httpx at the wire level for the GraphClient suite.
    "msal>=1.28",
    # X3 repo-hygiene (2026-07-16): replaced the `agent-framework` meta
    # package with core+openai pins. The 1.0.x meta line no longer
    # resolves on a fresh lock (its graph reaches a yanked pre-release of
    # agent-framework-orchestrations), and 1.10.x core ships a real
    # __init__.py — eliminating the empty-namespace quirk previously
    # documented in CLAUDE.md. The azure_openai connector no longer
    # exists in 1.10 core/openai; ms_agent_fw.py's azure branch already
    # degrades to a documented install error via its ImportError guard,
    # so no source change is required. Azure OpenAI support returns when
    # a connector package ships (MSAF follow-up scope).
    "agent-framework-core>=1.10,<2.0",
    "agent-framework-openai>=1.10,<2.0",
    # harness-ag-ui-bridge (task 1.4): HTTP/SSE transport surface for the
    # AG-UI bridge. fastapi pinned tight because it is the wire surface;
    # uvicorn and sse-starlette are runtime-only ASGI server + SSE helper.
    # ag-ui-protocol provides upstream AG-UI Python types (ag_ui.core event
    # classes); the PyPI package is named ag-ui-protocol, not ag-ui.
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.40",
    "sse-starlette>=2.1,<3.0",
    "ag-ui-protocol>=0.1,<1.0",
    "croniter>=2.0",
    "mcp>=1.27.2",
    # P30 durable-sessions (roadmap-sanctioned): Postgres-backed
    # LangGraph checkpointer for the DeepAgents harness. Ships the
    # sync + async savers (PostgresSaver / AsyncPostgresSaver) and
    # pulls in psycopg (v3), which the sync durable stores also use
    # via SQLAlchemy's postgresql+psycopg dialect.
    "langgraph-checkpoint-postgres>=2.0,<3.0",
]

[project.optional-dependencies]
telemetry = [
    "langfuse>=3.0,<4.0",
]

[project.scripts]
assistant = "assistant.cli:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpserver>=1.0",
    "openapi-spec-validator>=0.7",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
    "respx>=0.21",
    "types-croniter>=6.2.4.20260711",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "dist", "build", ".agents", ".claude", ".codex", ".gemini", "docs", "openspec/changes/archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
